syntax = "proto3";

package resources.mailer;

import "buf/validate/validate.proto";
import "codegen/dbscanner/dbscanner.proto";
import "codegen/sanitizer/sanitizer.proto";
import "resources/common/content/content.proto";
import "resources/mailer/email.proto";
import "resources/timestamp/timestamp.proto";
import "tagger/tagger.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/mailer;mailer";

message Message {
  int64 id = 1;
  int64 thread_id = 2;
  int64 sender_id = 3;
  optional resources.mailer.Email sender = 4 [(tagger.tags) = "alias:\"sender\""];
  resources.timestamp.Timestamp created_at = 5;
  optional resources.timestamp.Timestamp updated_at = 6;
  optional resources.timestamp.Timestamp deleted_at = 7;
  string title = 8 [
    (buf.validate.field).string = {
      min_len: 3
      max_len: 255
    },
    (codegen.sanitizer.sanitizer) = {
      enabled: true
      method: "StripTags"
    }
  ];
  resources.common.content.Content content = 9 [(codegen.sanitizer.sanitizer) = {enabled: true}];
  optional MessageData data = 10;
  optional int32 creator_id = 11;
  optional string creator_job = 12;
}

message MessageData {
  option (codegen.dbscanner.dbscanner) = {enabled: true};

  repeated MessageAttachment attachments = 1 [(buf.validate.field).repeated.max_items = 3];
}

message MessageAttachment {
  oneof data {
    option (buf.validate.oneof).required = true;

    MessageAttachmentDocument document = 1;
  }
}

message MessageAttachmentDocument {
  int64 id = 1;
  optional string title = 2 [(buf.validate.field).string.max_len = 768];
}
